# UserBot

./: .gitignore  api.py  config.py  env-sample.toml  horeca_channel_msgs  horeca_channel_phones  horeca_group_phones  horeca_group_usernames  horeca_parser.py  horeca_parser2.py  horeca_parser3.py  howyourbot.py  items.json  items2.json  items3.json  items4.json  items5.json  pyproject.toml  secret.py  test1.py
scratches/: clean_bots.py  main.py  test.py  test2.py  test3.py
