[tool.poetry]
name = "userbot"
version = "0.1.0"
description = ""
authors = ["levch <levchenko.d.a1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram-utils = "^0.1.4"
Pyrogram = "^2.0.16"
TgCrypto = "^1.2.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
